--- a/bin/multiplatformComm/index.html
+++ b/bin/multiplatformComm/index.html
@@ -3,8 +3,6 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
 <title>multiplatform communication demo</title>
-<script type="text/javascript" src="out.js"></script>
-
 <style>
 body
 {
@@ -35,7 +33,7 @@ a
 }
 </style>
 </head>
-<body onLoad="MultiplatformComm.main()">
+<body>
 	<p><em>This example shows how to communicate (using notificatons) between different platforms using pureMVC and haXe remoting (flash 8 and 9 only). The core application is javascript based, but could be easily written in flash8/flash9.</em></p>
 	<p>choose value:&nbsp;<input type="text" id="distance" value="10" />&nbsp;<a id="send_link" href="#">send</a></p>
 
@@ -99,6 +97,6 @@ a
 	<div id="js_container"><div id="box"></div></div>
 	<hr />
 	
-	<div id="haxe:trace"></div>
+	<script type="text/javascript" src="out.js"></script>
 </body>
 </html>
